<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="loading">Loading...</string>
    <string-array name="pref_units_list_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_list_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="pref_location_key" translatable="false">PREF_LOCATION_KEY</string>
    <string name="pref_location_name">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_units_key" translatable="false">PREF_UNITS_KEY</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string name="title_activity_settings">Settings</string>
    <string name="show_map">Show location on map</string>
</resources>
